--- a/src/ControleGastos.API/ControleGastos.API.csproj
+++ b/src/ControleGastos.API/ControleGastos.API.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\NaturezaDeLancamento\" />
+  </ItemGroup>
+
 </Project>
