feat: Criado contracts para service de Usuario

--- a/src/ControleGastos.API/ControleGastos.API.csproj
+++ b/src/ControleGastos.API/ControleGastos.API.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Contracts\NaturezaDeLancamento\" />
+    <Folder Include="Domain\Services\Classes\" />
   </ItemGroup>
 
 </Project>
